# distributed_learning_simulator

./: .gitignore  README.md  __init__.py  _algorithm_factory.py  algorithm_factory.py  analyze_log.py  config.py  executor.py  exp_analyzer.py  exp_analyzer.sh  factory.py  fed_aas.sh  fed_obd_train.sh  gtg_shapley_train.sh  other_method_test.sh  practitioner.py  process.py  pyproject.toml  requirements.txt  setup.py  simulator.py  test.sh  training.py  util.py
algorithm/: __init__.py  aggregation_algorithm.py  block_algorithm.py  fed_avg_algorithm.py  fed_dropout_avg_algorithm.py  graph_algorithm.py  obd_algorithm.py  random_dropout_algorithm.py  shapley_value_algorithm.py  sign_sgd_algorithm.py
algorithm/afd/: __init__.py  algorithm.py  server.py  worker.py
algorithm/fed_avg/: __init__.py
algorithm/fed_dropout_avg/: __init__.py  algorithm.py  server.py  worker.py
algorithm/fed_gcn/: __init__.py  worker.py
algorithm/fed_gnn/: __init__.py
algorithm/fed_obd/: __init__.py  obd_algorithm.py  server.py  worker.py
algorithm/fed_obd_layer/: __init__.py  obd_layer_algorithm.py  server.py  worker.py
algorithm/fed_obd_random_dropout/: __init__.py  worker.py
algorithm/fed_paq/: __init__.py
algorithm/qsgd/: __init__.py  aggregation_algorithm.py  server.py
algorithm/shapley_value/: GTG_shapley_value_algorithm.py  GTG_shapley_value_server.py  __init__.py  multiround_shapley_value_algorithm.py  multiround_shapley_value_server.py  shapley_value_algorithm.py
algorithm/sign_sgd/: __init__.py  aggregation_algorithm.py  server.py  worker.py
analysis/: analyze_log.py  analyze_round.py  document.py  exp_analyzer.py  graph_exp_analyzer.py  module_diff.py  session.py
conf/: global.yaml
conf/GTG_shapley_value/: mnist.yaml
conf/fed_aas/: PubMed.yaml  amazon_computer.yaml  amazonproducts.yaml  common.yaml  cora.yaml  cora_full.yaml  cs.yaml  dblp.yaml  flickr.yaml  physics.yaml  ppi.yaml  reddit.yaml  weibo.yaml  yelp.yaml
conf/fed_avg/: cifar10.yaml  cifar100.yaml  imagenet.yaml  imdb.yaml  mnist.yaml
conf/fed_avg_qat/: cifar10.yaml  mnist.yaml
conf/fed_cluster_gcn/: common.yaml  (+3 more)
data_split/: __init__.py  data_spliting.py  metis.py
method/: __init__.py  common_import.py
model_transform/: drop_normalization.py
sampler/: __init__.py  base.py  metis.py
server/: GTG_shapley_value_server.py  afd_server.py  aggregation_server.py  fed_avg_random_subset_server.py  fed_avg_server.py  fed_dropout_avg_server.py  fed_obd_server.py  fed_paq_server.py  gradient_server.py  graph_server.py  multiround_shapley_value_server.py  qsgd_server.py  server.py  shapley_value_algorithm.py  sign_sgd_server.py
simulation_lib/: algorithm_factory.py  config.py  dependency.py  executor.py  message.py  practitioner.py  training.py
topology/: central_topology.py  cs_endpoint.py  endpoint.py  peer_endpoint.py  peer_to_peer_topology.py  quantized_endpoint.py  topology.py
util/: data_spliting.py  model.py  model_cache.py  performance.py
worker/: afd_worker.py  aggregation_worker.py  client.py  fed_avg_worker.py  fed_dropout_avg_worker.py  fed_obd_random_dropout_worker.py  fed_obd_worker.py  fed_one_worker.py  fed_val_worker.py  gradient_worker.py  graph_worker.py  peer_worker.py  personalized_shapley_value_worker.py  qsgd_worker.py  sign_sgd_worker.py  worker.py
(+168 files in other folders)
