[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed_learning_simulator"
version = "1.0"
requires-python = ">=3.11"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "cyy", email = "cyyever@outlook.com"},
]
license = {text = "BSD License"}
classifiers = [
  "Programming Language :: Python"
]

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.setuptools.package-dir]
"distributed_learning_simulator.conf"= "./conf"
"distributed_learning_simulator.method"= "./method"
"distributed_learning_simulator.algorithm"= "./algorithm"

[project.urls]
Repository = "https://github.com/cyyever/distributed_learning_simulator"

[tool.pyright]
include = ["method","algorithm"]
defineConstant = { DEBUG = true }

reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py312"
src = ["method", "algorithm"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
