[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed_learning_simulator"
version = "1.0"
requires-python = ">=3.11"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "cyy", email = "cyyever@outlook.com"},
]
license = {text = "BSD License"}
classifiers = [
  "Programming Language :: Python"
]

dependencies = [
  "distributed_learning_simulation@git+https://github.com/cyyever/distributed_learning_simulation_lib.git",
  "cyy_torch_text@git+https://github.com/cyyever/torch_text.git",
  "cyy_torch_vision@git+https://github.com/cyyever/torch_vision.git"
]



[tool.setuptools.package-dir]
"distributed_learning_simulator.conf"= "./conf"
"distributed_learning_simulator.method"= "./method"
"distributed_learning_simulator.algorithm"= "./algorithm"

[project.urls]
Repository = "https://github.com/cyyever/distributed_learning_simulator"


[tool.ruff]
target-version = "py312"
src = ["method", "algorithm"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["F401","E501","F403"]
